--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -162,6 +162,19 @@
           <artifactId>commons-codec</artifactId>
           <version>1.3</version>
       </dependency>
+      <!-- logback -->
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-core</artifactId>
+          <version>1.1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+          <version>1.1.2</version>
+      </dependency>
+
+
   </dependencies>
   <build>
     <finalName>charisma</finalName>
