--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -162,7 +162,7 @@
           <artifactId>commons-codec</artifactId>
           <version>1.3</version>
       </dependency>
-      <!-- logback -->
+      <!-- logback  start-->
       <dependency>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-core</artifactId>
@@ -173,7 +173,7 @@
           <artifactId>logback-classic</artifactId>
           <version>1.1.2</version>
       </dependency>
-
+    <!-- logback end -->
 
   </dependencies>
   <build>
