--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -173,9 +173,42 @@
           <artifactId>logback-classic</artifactId>
           <version>1.1.2</version>
       </dependency>
-    <!-- logback end -->
+     <!-- logback end -->
+      <!--Apache Shiro所需的jar包-->
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-core</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-web</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-spring</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-ehcache</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-quartz</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <!-- ehcache -->
+      <dependency>
+          <groupId>net.sf.ehcache</groupId>
+          <artifactId>ehcache-core</artifactId>
+          <version>2.5.3</version>
+      </dependency>
 
   </dependencies>
+
   <build>
     <finalName>charisma</finalName>
   </build>
