--- a/charisma/src/main/webapp/WEB-INF/web.xml
+++ b/charisma/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,20 @@
   <!-- Spring和mybatis的配置文件 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring-mybatis.xml</param-value>
+    <param-value>
+      classpath:spring-mybatis.xml
+      classpath:
+    </param-value>
   </context-param>
+  <!-- Shiro配置 -->
+  <filter>
+    <filter-name>shiroFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>shiroFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   <!-- 编码过滤器 -->
   <filter>
     <filter-name>encodingFilter</filter-name>
