--- a/charisma/src/main/webapp/WEB-INF/web.xml
+++ b/charisma/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
       classpath:spring-mybatis.xml
-      classpath:
+      classpath:spring-shiro.xml
     </param-value>
   </context-param>
   <!-- Shiro配置 -->
