--- a/charisma/src/main/webapp/WEB-INF/web.xml
+++ b/charisma/src/main/webapp/WEB-INF/web.xml
@@ -58,6 +58,7 @@
   <servlet-mapping>
     <servlet-name>SpringMVC</servlet-name>
     <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
+    <url-pattern>*.htm</url-pattern>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
