--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -204,12 +204,27 @@
       <dependency>
           <groupId>net.sf.ehcache</groupId>
           <artifactId>ehcache-core</artifactId>
-          <version>2.5.3</version>
+          <version>2.6.6</version>
       </dependency>
 
   </dependencies>
 
   <build>
     <finalName>charisma</finalName>
+      <resources>
+          <resource>
+              <directory>src/main/java</directory>
+              <excludes>
+                  <exclude>**/*.java</exclude>
+              </excludes>
+          </resource>
+          <resource>
+                 <directory>src/main/resources</directory>
+                 <includes>
+                     <include>**/*.xml</include>
+                     <include>**/*.properties</include>
+                 </includes>
+             </resource>
+      </resources>
   </build>
 </project>
