--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -206,6 +206,12 @@
           <artifactId>ehcache-core</artifactId>
           <version>2.6.6</version>
       </dependency>
+      <!-- gson -->
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.2.3</version>
+      </dependency>
 
   </dependencies>
 
