--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -206,6 +206,17 @@
           <artifactId>ehcache-core</artifactId>
           <version>2.6.6</version>
       </dependency>
+      <!--aspect-->
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjrt</artifactId>
+          <version>1.8.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.8.0</version>
+      </dependency>
       <!-- gson -->
       <dependency>
           <groupId>com.google.code.gson</groupId>
