--- a/charisma/pom.xml
+++ b/charisma/pom.xml
@@ -240,6 +240,13 @@
           <artifactId>shiro-redis</artifactId>
           <version>2.4.2.1-RELEASE</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
+      <dependency>
+          <groupId>com.google.zxing</groupId>
+          <artifactId>core</artifactId>
+          <version>3.2.0</version>
+      </dependency>
+
   </dependencies>
 
   <build>
