--- a/charisma/src/main/webapp/WEB-INF/web.xml
+++ b/charisma/src/main/webapp/WEB-INF/web.xml
@@ -63,15 +63,15 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
  <!--CXF-->
-  <servlet>
-    <servlet-name>CXFServlet</servlet-name>
-    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/ws/*</url-pattern>
-  </servlet-mapping>
+  <!--<servlet>-->
+    <!--<servlet-name>CXFServlet</servlet-name>-->
+    <!--<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>-->
+    <!--<load-on-startup>1</load-on-startup>-->
+  <!--</servlet>-->
+  <!--<servlet-mapping>-->
+    <!--<servlet-name>CXFServlet</servlet-name>-->
+    <!--<url-pattern>/ws/*</url-pattern>-->
+  <!--</servlet-mapping>-->
 
   <welcome-file-list>
     <welcome-file>/index.jsp</welcome-file>
